Sorted json.net with serialisation binder

--- a/EventSourcing.ReliableActors/EventStore.DocumentDb/EventStore.DocumentDb.csproj
+++ b/EventSourcing.ReliableActors/EventStore.DocumentDb/EventStore.DocumentDb.csproj
@@ -54,6 +54,7 @@
     <Compile Include="EventStore\IEventStore.cs" />
     <Compile Include="EventStore\StoreConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TypeNameSerialisationBinder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
