--- a/EventSourcing.ReliableActors/EventStore.DocumentDb/EventStore.DocumentDb.csproj
+++ b/EventSourcing.ReliableActors/EventStore.DocumentDb/EventStore.DocumentDb.csproj
@@ -48,17 +48,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EventStore\EventStore.cs" />
-    <Compile Include="EventStore\EventStream.cs" />
-    <Compile Include="EventStore\IEvent.cs" />
-    <Compile Include="EventStore\IEventStore.cs" />
-    <Compile Include="EventStore\StoreConfiguration.cs" />
+    <Compile Include="EventStore.cs" />
+    <Compile Include="EventStream.cs" />
+    <Compile Include="IEvent.cs" />
+    <Compile Include="IEventStore.cs" />
+    <Compile Include="DocumentDbConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TypeNameSerialisationBinder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
