--- a/EventSourcing.ReliableActors/Client.Checkout.WebApi/project.json
+++ b/EventSourcing.ReliableActors/Client.Checkout.WebApi/project.json
@@ -14,6 +14,7 @@
         "Microsoft.Extensions.Logging": "1.0.0-rc1-final",
         "Microsoft.Extensions.Logging.Console": "1.0.0-rc1-final",
         "Microsoft.Extensions.Logging.Debug": "1.0.0-rc1-final",
+        "Newtonsoft.Json": "8.0.2",
         "WindowsAzure.ServiceBus": "3.1.3"
     },
 
@@ -22,7 +23,11 @@
   },
 
   "frameworks": {
-    "dnx451": { }
+    "dnx451": {
+        "dependencies": {
+            "Contracts": "1.0.0-*"
+        }
+    }
   },
 
   "exclude": [
