--- a/EventSourcing.ReliableActors/Orders.WebJob/Orders.WebJob.csproj
+++ b/EventSourcing.ReliableActors/Orders.WebJob/Orders.WebJob.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{8F17226C-481D-4DA8-A02B-E8AB670CDD24}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ComputeWebJobsSDKSvcBusQ</RootNamespace>
-    <AssemblyName>ComputeWebJobsSDKSvcBusQ</AssemblyName>
+    <RootNamespace>Orders.WebJob</RootNamespace>
+    <AssemblyName>Orders.WebJob</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
@@ -85,7 +85,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Functions.cs" />
+    <Compile Include="OrderCommandHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -95,7 +95,10 @@
     <None Include="Performance\Microsoft.ServiceBus.MessagingPerformanceCounters.man" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Project_Readme.html" />
+    <ProjectReference Include="..\Contracts\Contracts.csproj">
+      <Project>{4C3A791C-E441-42CA-904C-85F570F1EA46}</Project>
+      <Name>Contracts</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
